<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智慧校园</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_username_hint">手机号/用户名</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登  录</string>
    <string name="forget_passwd"><u>忘记密码</u></string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="loading">正在登录...</string>
    <string name="session_invalid_msg">登录失效，已重新登录，请重新获取数据</string>
    <string name="name_is_not_empty">用户名不能为空！</string>
    <string name="password_is_not_empty">密码不能为空！</string>
    <string name="menu_home_text">功能</string>
    <string name="menu_setting_text">设置</string>
    <string name="menu_message_text">消息中心</string>
    <string name="flower_select_radio1">学习先锋</string>
    <string name="flower_select_radio2">善行美德</string>
    <string name="flower_select_radio3">文艺标兵</string>
    <string name="flower_select_title">选择小红花</string>
    <string name="module_download_title">人脸识别模型下载</string>
    <string name="module_update_title">人脸识别模型更新</string>
    <string name="download_now">立刻下载</string>
    <string name="download_later">稍后下载</string>
    <string name="update_now">立刻更新</string>
    <string name="update_later">稍后更新</string>
    <string name="downloading">正在下载</string>
    <string name="student_tip1">%1$s 同学本学期共获得 %2$d 朵小红花</string>
    <string name="student_tip2">可用积分 %1$d 分</string>
    <string name="student_tip3">总积分 %1$d 分</string>
    <string name="goto_reward">兑奖</string>
    <string name="statistics_badge_title_text">小红花统计排行</string>
    <string name="attendance_ranking_title_text">缺勤排行</string>
    <string name="class_badge_text"> %1$s 共获得 %2$d 朵%3$s小红花，人均获得 %4$d 朵%5$s小红花</string>
    <string name="student_badge_text"> %1$s同学共获得 %2$s </string>
    <string name="student_badge_points"> 共%1$s枚     %2$s分 </string>
    <string name="menu_flower">小红花</string>
    <string name="menu_course">课表</string>
    <string name="menu_edu">泛在教育</string>
    <string name="menu_audit">内容审核</string>
    <string name="menu_homework">家庭作业</string>
    <string name="menu_remotecontrol">遥控器</string>
    <string name="menu_attendance">课堂考勤</string>
    <string name="menu_answer">课堂答题</string>
    <string name="menu_leave">请假换课</string>
    <string name="menu_teacher_leave">我要请假</string>
    <string name="menu_student_leave">学生请假</string>
    <string name="menu_work">作业</string>
    <string name="menu_notify">通知</string>
    <string name="menu_family_work">家庭作业</string>
    <string name="menu_school_compare">校务评比</string>
    <string name="menu_grade">成绩</string>
    <string name="menu_gradetrack">学情跟踪</string>
    <string name="menu_notice">通知</string>
    <string name="menu_cardmanager">校园卡管理</string>
    <string name="menu_qrcode">班级二维码</string>
    <string name="menu_parentapp">家长版APP</string>
    <string name="menu_clearcache">清空缓存</string>
    <string name="menu_exit_login">退出登录</string>
    <string name="menu_child_manage">孩子管理</string>

    <string name="menu_swtch">智能开关</string>
    
    <string name="menu_select_course">在线选课</string>
    
    <string name="create_code_title">班级二维码名片</string>
    <string name="class_list_title">班级列表</string>
    <string name="change_rule">角色选择</string>
    <string name="all">全部</string>
    <string name="all_date">本学期</string>
    <string name="get_student_data_failed">获取学生数据失败</string>
    <string name="get_class_data_failed">获取班级数据失败</string>
    <string name="get_class_data_empty">获取班级列表为空</string>
    <string name="get_badge_data_empty">获取小红花列表为空</string>
    <string name="get_badge_data_failed">获取小红花数据失败</string>
    <string name="card_upgrade">校园卡升级</string>
    <string name="card_version">校园卡版本：</string>
    <string name="start_prog">开始</string>
    <string name="cur_image">当前版本：</string>
    <string name="new_image">新版本：</string>
    <string name="recent_issued">近期颁发</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="revoke">撤销</string>
    <string name="save">保存</string>
    <string name="parent_register"><u>家长注册</u></string>
    <string name="parent_register_title">家长注册</string>
    <string name="add_child">添加孩子</string>
    <string name="class_qrcode">班级二维码</string>
    <string name="get_verify_link_text"><u>获取验证码</u></string>
    <string name="homework_family_title">智慧校园家长版--作业</string>
    <string name="menu_colligate_opinion">综合评价</string>
    <string name="attendance_student_text">学生考勤</string>
    <string name="attendance_query_text">缺勤查询</string>
    <string name="student_absence_text">缺勤 %1$s 次</string>
    <string name="attance_title">考勤\n统计</string>
    <string name="menu_guestbook">留言簿</string>
    <string name="student_week_step_blank">本周平均每天&#160;&#160;&#160;&#160;&#160;步</string>
    <string name="student_week_step">本周平均每天%d步</string>
    <string name="student_rank_step_blank">""班级排名第&#160;&#160;步"</string>
    <string name="student_rank_step">班级排名第%２$d步</string>
    <string name="student_card_version_can_upgrade">此校园卡有新版本程序!\n点击下方&quot;升级&quot;按钮进行升级!</string>
    <string name="student_card_version_cannot_upgrade">此校园卡已经是最新版本!</string>
    <string name="dialog_login_pwd_tip_title">提示</string>
    <string name="dialog_login_pwd_tip_msg_one">您的登录密码存在安全隐患，</string>
    <string name="dialog_login_pwd_tip_msg_two">建议修改密码!</string>
    <string name="dialog_login_pwd_tip_btn_change">立即修改</string>
    <string name="dialog_login_pwd_tip_btn_continue">知道了</string>
    <string name="family_feedback">家长反馈：</string>
    <string name=" teacher_correct">老师批改：</string>
    <string name="graffiti_moving_pic">单指移动、双指缩放</string>
    <string name="graffiti_clear_screen">清屏</string>
    <string name="graffiti_cant_undo_after_clearing">清屏后不可撤销</string>
    <string name="graffiti_saving_picture">保存图片</string>
    <string name="graffiti_enter">确定</string>
    <string name="graffiti_cancel">取消</string>
    <string name="graffiti_success">成功</string>
    <string name="graffiti_failed">失败</string>
    <string name="graffiti_edit">编辑</string>
    <string name="graffiti_remove">移除</string>
    <string name="graffiti_top">置顶</string>
    
    <string name="title_activity_exchange_course">ExchangeCourseActivity</string>
    <string name="action_settings">Settings</string>

    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="leave_stat_label">本学期请假统计排行</string>
    <string name="leave_stat_title_t1">No.</string>
    <string name="leave_stat_title_t2">姓名</string>
    <string name="leave_stat_title_t3">请假次数</string>
    <string name="leave_stat_title_t4">请假时长</string>

    <string name="student_leave_icon_desc">统计排行</string>
    <string name="student_leave_name_label">小明</string>
    <string name="student_leave_time_label">请假时间：</string>
    <string name="student_leave_time_text">2018.3.23 8:00 至 2018.3.23 17:00</string>
    <string name="student_leave_reason_label">请假事由：</string>
    <string name="student_leave_reason_text">感冒发烧需要打针，一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十</string>
    <string name="student_leave_confirm_icon_desc">批准</string>
    <string name="student_leave_reject_icon_desc">驳回</string>
    <string name="student_leave_approved_icon_desc">已批准</string>
    <string name="student_leave_rejected_icon_desc">已驳回</string>
    <string name="student_leave_pending_icon_desc">待审批</string>
    <string name="student_leave_classname">班级名称</string>

    <string name="notify_list_title">通知</string>
    <string name="notify_detail_title">通知详情</string>
    <string name="notify_list_item_title">关于新学期的通知</string>
    <string name="notify_list_item_time">2018-09-06</string>
    <string name="notify_list_item_enter">></string>
    <string name="notify_list_item_detail">为认真贯彻实施执行上级部门关于加强</string>
    <string name="notify_list_item_etc">…</string>
    <string name="notify_list_item_unread">16人未读 </string>

</resources>
