<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_height="41dp" >
        <TextView
            android:id="@+id/leave_stat_tv1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/leave_stat_title_t1" />
        <TextView
            android:id="@+id/leave_stat_tv2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/leave_stat_title_t2" />
        <TextView
            android:id="@+id/leave_stat_tv3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/leave_stat_title_t3" />
        <TextView
            android:id="@+id/leave_stat_tv4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/leave_stat_title_t4" />
    </LinearLayout>
    <TextView 
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text=""
        android:background="#999999"
        />
</LinearLayout>
