<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginLeft="13dp"
    android:layout_marginRight="13dp"
    android:orientation="vertical"
    >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            android:id="@+id/notify_title_tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="223"
            android:text="@string/notify_list_item_title"
            android:textColor="#333333"
            android:textSize="16sp"
            />
        <TextView 
            android:id="@+id/notify_time_tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="96"
            android:text="@string/notify_list_item_time"
            android:textSize="16sp"
            android:textColor="#999999"
            />
        <Space 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            />
        <ImageView 
            android:id="@+id/notify_icon_iv1"
            android:contentDescription="@string/notify_list_item_enter"
            android:src="@drawable/ic_arrow_teacher"
            android:gravity="end"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        >
        <TextView 
            android:id="@+id/notify_detail_tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="230"
            android:text="@string/notify_list_item_detail"
            android:textColor="#999999"
            android:textSize="15sp"
            android:maxLines="1"
            />
        <TextView 
            android:id="@+id/notify_etc_tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/notify_list_item_etc"
            android:textColor="#999999"
            android:textSize="15sp"
            />
        <Space 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="27"
            />
        <TextView 
            android:id="@+id/notify_unread_tv1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="67"
            android:text="@string/notify_list_item_unread"
            android:background="@drawable/shape_teacher_notify_unread"
            android:textSize="10sp"
            android:textColor="#ffffff"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/vline1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#cccccc" />

</LinearLayout>
