<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:background="#f5f5f5"
        android:layout_width="match_parent"
        android:layout_height="42dp" >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/leave_stat_label" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_height="41dp" >
        <TextView
            android:id="@+id/leave_stat_title_tv1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/leave_stat_title_t1" />
        <TextView
            android:id="@+id/leave_stat_title_tv2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/leave_stat_title_t2" />
        <TextView
            android:id="@+id/leave_stat_title_tv3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/leave_stat_title_t3" />
        <TextView
            android:id="@+id/leave_stat_title_tv4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/leave_stat_title_t4" />
    </LinearLayout>

    <LinearLayout 
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#999999"
        />
    <ListView
        android:id="@+id/leave_stat_lv1"
        android:layout_width="match_parent"
        android:divider="#00ffffff"
        android:layout_height="wrap_content" >
    </ListView>
    <Space
        android:layout_height="14dp"
        android:layout_width="fill_parent"
        />

</LinearLayout>
