<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/txt_dialog_login_pwd_tip_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/dialog_login_pwd_tip_title"
        android:textColor="#12baf2"
        android:textSize="18sp" />

    <View
        android:id="@+id/bar_dialog_login"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/txt_dialog_login_pwd_tip_title"
        android:background="#12baf2" />

    <TextView
        android:id="@+id/txt_dialog_login_pwd_tip_msg_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bar_dialog_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/dialog_login_pwd_tip_msg_one"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_dialog_login_pwd_tip_msg_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_dialog_login_pwd_tip_msg_one"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/dialog_login_pwd_tip_msg_two"
        android:textSize="20sp" />

    <View
        android:id="@+id/bar_dialog_login_two"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/txt_dialog_login_pwd_tip_msg_two"
        android:layout_marginTop="20dp"
        android:background="#ededed" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bar_dialog_login_two"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_dialog_login_pwd_tip_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_login_pwd_tip_btn_change"
            android:textColor="#12baf2"
            android:textSize="20sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#ededed" />

        <TextView
            android:id="@+id/txt_dialog_login_pwd_tip_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_login_pwd_tip_btn_continue"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>